[package]
name = "proxy-forwarder"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
reqwest = { version = "0.12.23", features = ["json"] }
redis = { version = "0.32.5", features = ["aio", "tokio-comp", "connection-manager"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
